--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^3.1.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.50",
     "@types/react": "^16.9.43",
+    "@types/react-cropper": "^1.3.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-widgets": "^4.4.2",
@@ -20,7 +22,9 @@
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
     "react": "^16.13.1",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.2",
     "react-final-form": "^6.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
